# k-means-clustering-in-C-

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  main.cpp  point.cpp  point.h
testData/: sample_1.txt  sample_2.txt  sample_3.txt
